# avr-cmake

./: .gitignore  .org-mode.emacs.el  Makefile  README.md  avr-cmake.org
examples/: cmake_test.sh
examples/balancing/sketch/: sketch.ino
examples/balancing/src/: CMakeLists.txt  main.cpp
examples/buzzer/sketch/: sketch.ino
examples/buzzer/src/: CMakeLists.txt  main.cpp
examples/progmemTest/src/: CMakeLists.txt  main.cpp
